--- a/best_on_ruliweb.ipynb
+++ b/best_on_ruliweb.ipynb
@@ -5,145 +5,157 @@
    "metadata": {},
    "source": [
     " ## 루리웹 베스트 🤖\n",
-    " ### 루리웹 베스트를 모아주는 봇입니다.\n",
+    "\n",
+    " 루리웹 베스트를 모아주는 봇입니다.\n",
+    "\n",
+    " - 개발자: skettee\n",
+    "\n",
+    " - 깃허브 주소: [best_on_ruliweb](https://github.com/skettee/best_on_ruliweb)\n",
+    "\n",
     "\n",
     " ### 개발 환경 만들기\n",
     "\n",
-    "  봇을 개발하기 위해서는 몇가지 소프트웨어를 설치하고 환경을 설정해야 합니다.\n",
-    "  [개발 환경 만들기](https://github.com/moabogey/docs/wiki/개발환경만들기)를 참조 하세요.\n",
+    " 봇을 개발하기 위해서는 몇가지 소프트웨어를 설치하고 환경을 설정해야 합니다.\n",
+    " [개발 환경 만들기](https://github.com/moabogey/docs/wiki/개발환경만들기)를 참조 하세요.\n",
     "\n",
     " ### 코드 실행\n",
     "\n",
-    "  - 터미널 실행\n",
-    "    1. 🖼  Windows PowerShell을 실행한다.\n",
-    "    2. 🍎 Terminal을 실행한다.\n",
+    " - 터미널 실행\n",
     "\n",
-    "  - 작업할 폴더를 생성한다.\n",
+    "   1. 🖼  Windows PowerShell을 실행한다.\n",
     "\n",
-    "  ```\n",
-    "  mkdir MyWork\n",
-    "  ```\n",
+    "   2. 🍎 Terminal을 실행한다.\n",
     "\n",
-    "  - 작업할 폴더로 이동한다.\n",
+    " - 작업할 폴더를 생성한다.\n",
     "\n",
-    "  ```\n",
-    "  cd MyWork\n",
-    "  ```\n",
+    " ```\n",
+    " mkdir MyWork\n",
+    " ```\n",
     "\n",
-    "  - 깃 클론 (Git Clone)을 수행한다.\n",
+    " - 작업할 폴더로 이동한다.\n",
     "\n",
-    "  ```\n",
-    "  git clone https://github.com/skettee/best_on_ruliweb.git\n",
-    "  ```\n",
+    " ```\n",
+    " cd MyWork\n",
+    " ```\n",
     "\n",
-    "  - 복사한 코드의 폴더로 이동한다.\n",
+    " - 깃 클론 (Git Clone)을 수행한다.\n",
     "\n",
-    "  ```\n",
-    "  cd best_on_ruliweb\n",
-    "  ```\n",
+    " ```\n",
+    " git clone https://github.com/skettee/best_on_ruliweb.git\n",
+    " ```\n",
     "\n",
-    "  - VSCode를 실행한다.\n",
+    " - 복사한 코드의 폴더로 이동한다.\n",
     "\n",
-    "  ```\n",
-    "  code .\n",
-    "  ```\n",
+    " ```\n",
+    " cd best_on_ruliweb\n",
+    " ```\n",
     "\n",
-    "  - 왼쪽 EXPLORE에서 `best_on_ruliweb.py`를 선택한다.\n",
+    " - VSCode를 실행한다.\n",
     "\n",
-    "  - 하단 바에 `Python3.7.3 64-bit('base':conda)`를 누른다.\n",
+    " ```\n",
+    " code .\n",
+    " ```\n",
     "\n",
-    "  - `Python 3.6.8 64-bit ('moabogey':conda)`를 선택한다.\n",
+    " - 왼쪽 EXPLORE에서 `best_on_ruliweb.py`를 선택한다.\n",
     "\n",
-    "  - 소스 코드에 RunCell | Run Below에서 `Run Below`를 누른다.\n",
+    " - 하단 바에 `Python3.7.3 64-bit('base':conda)`를 누른다.\n",
     "\n",
-    "  - 데이터가 정상적으로 수집이 되는지 오른쪽 Python Interactive에서 확인한다.\n",
+    " - `Python 3.6.8 64-bit ('moabogey':conda)`를 선택한다.\n",
+    "\n",
+    " - 소스 코드에 RunCell | Run Below에서 `Run Below`를 누른다.\n",
+    "\n",
+    " - 데이터가 정상적으로 수집이 되는지 오른쪽 Python Interactive에서 확인한다.\n",
     "\n",
     "\n",
     " ### 코드 분석\n",
     "\n",
-    "  best_on_ruliweb.py를 분석합니다.\n",
-    "  봇의 소스 코드는 크게 세단계로 나눌 수 있습니다.\n",
+    " best_on_ruliweb.py를 분석합니다.\n",
+    " 봇의 소스 코드는 크게 세단계로 나눌 수 있습니다.\n",
     "\n",
-    "  1. 사이트의 HTML에서 데이터를 수집\n",
+    " 1. 사이트의 HTML에서 데이터를 수집\n",
     "\n",
-    "  2. 포스트의 HTML에서 데이터를 수집\n",
+    " 2. 포스트의 HTML에서 데이터를 수집\n",
     "\n",
-    "  3. 데이터 저장\n",
+    " 3. 데이터 저장\n",
+    "\n",
     "\n",
     " **사이트의 HTML에서 데이터를 수집**\n",
     "\n",
-    "    - 데이터를 수집할 사이트의 정보와 주소를 설정합니다. 여기에서는 https://bbs.ruliweb.com/best/hit_history 에서 데이터를 수집합니다.\n",
+    " - 데이터를 수집할 사이트의 정보와 주소를 설정합니다. 여기에서는 https://bbs.ruliweb.com/best/hit_history 에서 데이터를 수집합니다.\n",
     "\n",
-    "    - requests와 beautifulsoup4를 이용해서 사이트의 HTML을 가져오고 파일로 저장합니다.\n",
+    " - requests와 beautifulsoup4를 이용해서 사이트의 HTML을 가져오고 파일로 저장합니다.\n",
     "\n",
-    "    - 저장된 HTML파일 (ruliweb_source.html)을 열어 봅니다. 여기서 우리는 \"포스트의 리스트\"를 표현하는 구간을 찾을 것입니다. **포스트**는 제목, 내용, 이미지, 작성자, 작성 날짜 및 페이지 위치(URL)를 가지고 있는 하나의 문서를 나타내는 용어로 사용합니다.\n",
+    " - 저장된 HTML파일 (ruliweb_source.html)을 열어 봅니다. 여기서 우리는 \"포스트의 리스트\"를 표현하는 구간을 찾을 것입니다. **포스트**는 제목, 내용, 이미지, 작성자, 작성 날짜 및 페이지 위치(URL)를 가지고 있는 하나의 문서를 나타내는 용어로 사용합니다.\n",
     "\n",
-    "    ```\n",
-    "    +-------------+  +-->   <div class=\"article_info\">\n",
-    "    |   Post 1\n",
-    "    |  (Item 1)\n",
-    "    +-------------+  +-->   </div>\n",
+    " ```\n",
+    " +-------------+ +->   <div class=\"article_info\">\n",
+    " |   Post 1\n",
+    " |  (Item 1)\n",
+    " +-------------+ +->   </div>\n",
     "\n",
-    "    +-------------+  +-->   <div class=\"article_info\">\n",
-    "    |   Post 2\n",
-    "    |  (Item 2)\n",
-    "    +-------------+  +-->   </div>\n",
+    " +-------------+ +->   <div class=\"article_info\">\n",
+    " |   Post 2\n",
+    " |  (Item 2)\n",
+    " +-------------+ +->   </div>\n",
     "\n",
-    "    +-------------+  +-->  <div class=\"article_info\">\n",
-    "    |   Post3\n",
-    "    |  (Item 3)\n",
-    "    +-------------+  +-->   </div>\n",
-    "    ```\n",
+    " +-------------+ +->  <div class=\"article_info\">\n",
+    " |   Post3\n",
+    " |  (Item 3)\n",
+    " +-------------+ +->   </div>\n",
+    " ```\n",
     "\n",
-    "    - 각각의 포스트는 `<div class=\"article_info\">` 에서 시작 되고 `</div>`로 끝난다는 것을 알아내는 것이 중요합니다. 이것은 사이트마다 다르기 때문에 이것을 찾아내는 것은 약간의 경험이 필요합니다.\n",
+    " - 각각의 포스트는 `<div class=\"article_info\">` 에서 시작 되고 `</div>`로 끝난다는 것을 알아내는 것이 중요합니다. 이것은 사이트마다 다르기 때문에 이것을 찾아내는 것은 약간의 경험이 필요합니다.\n",
     "\n",
-    "    - 발견한 포스트에서 아래와 같이 포스트 위치(URL)를 찾습니다.\n",
+    " - 발견한 포스트에서 아래와 같이 포스트 위치(URL)를 찾습니다.\n",
     "\n",
-    "    ```\n",
-    "    +-------------+\n",
-    "    |   Post 1\n",
-    "    +-------------+\n",
-    "    |\n",
-    "    |  post URL   +-->  <a class=\"deco\" href=\"...>\n",
-    "    |\n",
-    "    +-------------+\n",
-    "    ```\n",
+    " ```\n",
+    " +-------------+\n",
+    " |   Post 1\n",
+    " +-------------+\n",
+    " |\n",
+    " |  post URL   +->  <a class=\"deco\" href=\"...>\n",
+    " |\n",
+    " +-------------+\n",
+    " ```\n",
     "\n",
-    "    - 나머지 데이터를 수집하기 위해서 포스트 HTML로 이동합니다.\n",
+    " - 나머지 데이터를 수집하기 위해서 포스트 HTML로 이동합니다.\n",
+    "\n",
     "\n",
     " **포스트의 HTML에서 데이터를 수집**\n",
     "\n",
-    "    - 데이터를 수집할 포스트의 주소를 설정합니다.\n",
+    " - 데이터를 수집할 포스트의 주소를 설정합니다.\n",
     "\n",
-    "    - requests와 beautifulsoup4를 이용해서 사이트의 HTML을 가져오고 파일로 저장합니다.\n",
+    " - requests와 beautifulsoup4를 이용해서 사이트의 HTML을 가져오고 파일로 저장합니다.\n",
     "\n",
-    "    - 저장된 HTML파일 (ruliweb_post_source.html)을 열어 봅니다. 여기서 우리는 포스트의 제목, 이미지, 사이트 이름, 작성자, 포스트 주소(URL), 수집 날짜 및 시간 데이터를 수집할 것입니다.\n",
+    " - 저장된 HTML파일 (ruliweb_post_source.html)을 열어 봅니다. 여기서 우리는 포스트의 제목, 이미지, 사이트 이름, 작성자, 포스트 주소(URL), 수집 날짜 및 시간 데이터를 수집할 것입니다.\n",
+    "\n",
     "\n",
     " **Open Graph Protocol**\n",
     "\n",
-    "    - 대부분의 사이트들은 우리가 수집할 데이터를 사이트의 첫머리에 미리 모아 놓고 있습니다. 이 규약(Protocol)은 사이트를 모두 분석하지 않고도 사이트의 내용을 파악하는데 도움이 됩니다.\n",
+    " - 대부분의 사이트들은 우리가 수집할 데이터를 사이트의 첫머리에 미리 모아 놓고 있습니다. 이 규약(Protocol)은 사이트를 모두 분석하지 않고도 사이트의 내용을 파악하는데 도움이 됩니다.\n",
     "\n",
-    "    - 아래와 같은 메타 태그를 사용합니다.\n",
+    " - 아래와 같은 메타 태그를 사용합니다.\n",
     "\n",
-    "   ```html\n",
-    "   <head>\n",
-    "   ...\n",
-    "       <meta content=\"...\" property=\"og:url\"/>\n",
-    "       <meta content=\"...\" property=\"og:title\"/>\n",
-    "       <meta content=\"...\" property=\"og:image\"/>\n",
-    "       <meta content=\"...\" property=\"og:description\"/>\n",
-    "       <meta content=\"...\" property=\"og:site_name\"/>\n",
-    "   ...\n",
-    "   </head>\n",
-    "   ```\n",
+    " ```html\n",
+    " <head>\n",
+    " ...\n",
+    "     <meta content=\"...\" property=\"og:url\"/>\n",
+    "     <meta content=\"...\" property=\"og:title\"/>\n",
+    "     <meta content=\"...\" property=\"og:image\"/>\n",
+    "     <meta content=\"...\" property=\"og:description\"/>\n",
+    "     <meta content=\"...\" property=\"og:site_name\"/>\n",
+    " ...\n",
+    " </head>\n",
+    " ```\n",
     "\n",
-    "    - 메타 태그에서 데이터를 수집합니다.\n",
+    " - 메타 태그에서 데이터를 수집합니다.\n",
     "\n",
-    "    - 메타 태그의 정보가 부족한 경우에는 본문에서 직접 데이터를 수집합니다.\n",
+    " - 메타 태그의 정보가 부족한 경우에는 본문에서 직접 데이터를 수집합니다.\n",
+    "\n",
     "\n",
     " **데이터 저장**\n",
     "\n",
-    "    - 수집한 데이터를 선별해서 중복되는 것을 제외하고 데이터베이스에 저장합니다. 모아보기 봇은 하루에 24번 이상 동작 하도록 되어 있기 때문에 한번에 모든 데이터를 수집하지 않고 가장 최근의 데이터 1~2개를 수집하는 것이 원칙입니다.\n",
+    " - 수집한 데이터를 선별해서 중복되는 것을 제외하고 데이터베이스에 저장합니다. 모아보기 봇은 하루에 24번 이상 동작 하도록 되어 있기 때문에 한번에 모든 데이터를 수집하지 않고 가장 최근의 데이터 1~2개를 수집하는 것이 원칙입니다.\n",
     "\n",
     "\n",
     " ### 참고 사이트\n",
@@ -156,7 +168,10 @@
     "\n",
     " - [예제 코드 분석](https://github.com/moabogey/docs/wiki/예제코드분석)\n",
     "\n",
-    " - [봇 개발 하기](https://github.com/moabogey/docs/wiki/봇개발하기)"
+    " - [봇 개발 하기](https://github.com/moabogey/docs/wiki/봇개발하기)\n",
+    "\n",
+    "\n",
+    " ### ⬇️소스코드"
    ]
   },
   {
@@ -171,14 +186,14 @@
       "https://bbs.ruliweb.com/best/hit_history 데이터 수집 중... ⚙️\n",
       "📀 수집한 json data: \n",
       "{\n",
-      "    \"title\": \"[자작] 취미로 요리하는 남자의 세계4대진미 2편 트러플(송로버섯)\",\n",
-      "    \"desc\": \"송로버섯을 구매했습니다.\\n비싼 식재료...\",\n",
-      "    \"url\": \"https://bbs.ruliweb.com/hobby/board/300117/read/30605699\",\n",
-      "    \"image\": \"https://i1.ruliweb.com/img/19/05/03/16a7e15cd7e4a4e32.jpg\",\n",
+      "    \"title\": \"[마이룸] 30대 후반 싱글의 투룸 입니다 ~\",\n",
+      "    \"desc\": \"베스트 감사합니다 (__)\\n안녕하세요...\",\n",
+      "    \"url\": \"https://bbs.ruliweb.com/hobby/board/300116/read/30562079\",\n",
+      "    \"image\": \"https://i2.ruliweb.com/img/19/05/06/16a8c21be2ad2650.jpg\",\n",
       "    \"siteName\": \"루리웹\",\n",
-      "    \"createdBy\": \"취미로 요리하는남자\",\n",
-      "    \"createdAt\": \"2019-05-03 14:39:04\",\n",
-      "    \"timeStamp\": \"2019-05-13 15:12:33.980654\"\n",
+      "    \"createdBy\": \"라프&히르\",\n",
+      "    \"createdAt\": \"2019-05-06 09:30:06\",\n",
+      "    \"timeStamp\": \"2019-05-15 23:32:27.723747\"\n",
       "}\n"
      ]
     },
@@ -189,7 +204,7 @@
        "<style>\n",
        "  .card {\n",
        "    width: 340px;\n",
-       "    padding-bottom: 20px;\n",
+       "    margin-bottom: 20px;\n",
        "    border: 1px solid #DDDDDD;\n",
        "    border-radius: 4px;\n",
        "    overflow: hidden;\n",
@@ -220,12 +235,12 @@
        "  }\n",
        "</style>\n",
        "<div class=\"card\">\n",
-       "  <img src=https://i1.ruliweb.com/img/19/05/03/16a7e15cd7e4a4e32.jpg alt=\"Image\" class=\"center\">\n",
+       "  <img src=\"https://i2.ruliweb.com/img/19/05/06/16a8c21be2ad2650.jpg\" alt=\"Image\" class=\"center\">\n",
        "  <div class=\"card_item\">\n",
        "    <h5>루리웹</h5>\n",
-       "    <h4><b>[자작] 취미로 요리하는 남자의 세계4대진미 2편 트러플(송로버섯)</b></h4> \n",
+       "    <h4><b>[마이룸] 30대 후반 싱글의 투룸 입니다 ~</b></h4> \n",
        "    <hr>\n",
-       "    <p> By 취미로 요리하는남자 </p>\n",
+       "    <p> By 라프&히르 </p>\n",
        "  </div>\n",
        "</div>\n"
       ],
