--- a/best_on_ruliweb.ipynb
+++ b/best_on_ruliweb.ipynb
@@ -22,9 +22,9 @@
     "\n",
     " - 터미널 실행\n",
     "\n",
-    "   1. 🖼  Windows PowerShell을 실행한다.\n",
+    "   - 🖼  Windows PowerShell을 실행한다.\n",
     "\n",
-    "   2. 🍎 Terminal을 실행한다.\n",
+    "   - 🍎 Terminal을 실행한다.\n",
     "\n",
     " - 작업할 폴더를 생성한다.\n",
     "\n",
@@ -62,7 +62,7 @@
     "\n",
     " - `Python 3.6.8 64-bit ('moabogey':conda)`를 선택한다.\n",
     "\n",
-    " - 소스 코드에 RunCell | Run Below에서 `Run Below`를 누른다.\n",
+    " - 소스 코드에 `RunCell | Run Below`에서 `Run Below`를 누른다.\n",
     "\n",
     " - 데이터가 정상적으로 수집이 되는지 오른쪽 Python Interactive에서 확인한다.\n",
     "\n",
@@ -177,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -193,7 +195,7 @@
       "    \"siteName\": \"루리웹\",\n",
       "    \"createdBy\": \"라프&히르\",\n",
       "    \"createdAt\": \"2019-05-06 09:30:06\",\n",
-      "    \"timeStamp\": \"2019-05-15 23:32:27.723747\"\n",
+      "    \"timeStamp\": \"2019-05-16 00:30:23.404009\"\n",
       "}\n"
      ]
     },
